--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-  
-    
+    <div class="efect">
+      <img class="bot" src="images/bg-pattern-bottom.svg" alt="" />
+      <img class="top" src="images/bg-pattern-top.svg" alt="" />
+    </div>
+
+    <div class="min_div">
+      <div class="conteinet">
+        <img class="min_bac" src="images/bg-pattern-card.svg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
