--- a/index.html
+++ b/index.html
@@ -20,7 +20,34 @@
 
     <div class="min_div">
       <div class="conteinet">
-        <img class="min_bac" src="images/bg-pattern-card.svg" alt="" />
+        <img
+          class="min_bac"
+          src="images/bg-pattern-card.svg"
+          alt="bg-pattern-card"
+        />
+        <img class="imagea" src="images/image-victor.jpg" alt="" />
+        <div class="text">
+          <div class="min_tex">
+            <h2>victor crest <span>26</span></h2>
+            <span class="h2_span">london</span>
+          </div>
+          <br />
+          <hr />
+          <div class="nums">
+            <div class="num">
+              <h3>80K</h3>
+              <span>followers</span>
+            </div>
+            <div class="num">
+              <h3>803K</h3>
+              <span>likes</span>
+            </div>
+            <div class="num">
+              <h3>1.4K</h3>
+              <span>photos</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
